# cookiecutter-mm

./: README.md  cookiecutter.json
{{ cookiecutter.__project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
{{ cookiecutter.__project_slug }}/src/: example.py
{{ cookiecutter.__project_slug }}/tests/: test_example.py
