[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "test"
description = "Cookiecutter test"
authors = [
    {name = "Cas van Rijn", email = "cas.van.rijn@rws.nl"},
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
